	* Fix possible memory leaks (using g_free... where is need)
	* Folowing path from current document view
	(DONE) Hide object files as native filebroser (*.o;*.a;*.so;*.dll;*.lib..)
	(DONE) Using font from geany settings for sidebar
	* Migrating to stash
	* Adding keybindings for renaming/deleting/refreshing
	(DONE) Add option to change bars position // requested by <dmaphy>
	* Add option to autorename the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+

25-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Added option to change bars position (Top or Bottom)

25-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Menu elements are inactive instands of hidden
		Added experimental bookmarks view
		Added option to show/hide tree lines
		Added option to copy the uri into clipboard
		Added option to search into the view by the name // thanks to native filebrowser
		Added tooltips with uri // thanks to native filebrowser
		Added option to open terminal
		Applied patch from Enrico to fix gtk+-2.8 compitable for tree lines
		Fixed "Go Up" not working if the current path ends with slash


19-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		added clear icon in filter // thanks to native filebrowser plugin
		using font from geany settings for sidebar  // thanks to native filebrowser plugin


17-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		added option to hide object files *.so;*.obj;*.so;*.dll;*.a;*.lib
		fixed a few warnings


14-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		strings cleanup
		(This is version 0.2, because the plugin become 2 months old :)


11-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed bug when turned off "On expand refresh"